@@ -113,17 +113,17 @@ class Footer extends Files\CreateFile
         $ret     = $this->hc->getHtmlDiv('<{$copyright}>', 'pull-left', '', "\n", false);
         $ret     .= $this->hc->getHtmlEmpty("\n");
         $contIf  = $this->hc->getHtmlDiv('<{$pagenav}>', 'pull-right', "\t", "\n", false);
-        $ret     .= $this->sc->getSmartyConditions('pagenav', ' != ', "''", $contIf);
+        $ret     .= $this->sc->getSmartyConditions('pagenav', '', '', $contIf);
         $ret     .= $this->hc->getHtmlEmpty("<br>\n");
         $contIf  = $this->hc->getHtmlDiv("<a href='<{\$admin}>'><{\$smarty.const.{$language}ADMIN}></a>", 'text-center bold', "\t", "\n", false);
-        $ret     .= $this->sc->getSmartyConditions('xoops_isadmin', ' != ', "''", $contIf);
+        $ret     .= $this->sc->getSmartyConditions('xoops_isadmin', '', '', $contIf);
         $ret     .= $this->hc->getHtmlEmpty("\n");
         $contIf  = $this->sc->getSmartyIncludeFile('system_comments','flat',false, false,"\t\t\t");
         $contIf  .= $this->getSimpleString('<{elseif $comment_mode == "thread"}>',"\t\t");
         $contIf  .= $this->sc->getSmartyIncludeFile('system_comments','thread',false, false,"\t\t\t");
         $contIf  .= $this->getSimpleString('<{elseif $comment_mode == "nest"}>',"\t\t");
         $contIf  .= $this->sc->getSmartyIncludeFile('system_comments','nest',false, false,"\t\t\t");
-        $contDiv = $this->sc->getSmartyConditions('comment_mode', ' == ', '"flat"', $contIf, false, '','',"\t\t");
+        $contDiv = $this->sc->getSmartyConditions('comment_mode', ' == ', '"flat"', $contIf, false, '','',"\t\t", "\n", true, false);
         $contIf  = $this->hc->getHtmlDiv($contDiv, 'pad2 marg2', "\t", "\n", true);
         $ret     .= $this->sc->getSmartyConditions('comment_mode', '', '', $contIf);
         $ret     .= $this->sc->getSmartyIncludeFile('system_notification','select');
