@@ -4,7 +4,6 @@
         <img src="<{xoModuleIcons32 xoopsmicrobutton.gif}>" alt='Xoops Logo'/></a>
 </div>
 <div class='center smallsmall italic pad5'>
-    <{$maintained}>
     <a href='https://xoops.org/forums/newbb' title='Visit Support Forum' class='tooltip' rel='external'>
         <{$smarty.const._AM_MODULEBUILDER_SUPPORT_FORUM}></a>
 </div>
