@@ -1,6 +1,6 @@
 <!-- Header -->
 <{includeq file="db:modulebuilder_header.tpl"}>
 <!-- Index Page -->
-<div class="top"><{$index}></div>
+<div class="top"><{$index|default:''}></div>
 <!-- Footer -->
 <{*<{includeq file="db:modulebuilder_footer.tpl"}>*}>
