@@ -1,7 +1,7 @@
 <!-- Header -->
 <{includeq file="db:modulebuilder_header.tpl"}>
 <!-- Display modules list -->
-<{if $modules_list}>
+<{if $modules_list|default:''}>
     <table class='outer width100'>
         <tr>
             <th class='center'><{$smarty.const._AM_MODULEBUILDER_MODULE_ID}></th>
@@ -90,17 +90,17 @@
     <br/>
     <!-- Display modules navigation -->
     <div class="clear">&nbsp;</div>
-    <{if $pagenav}>
+    <{if $pagenav|default:''}>
         <div class="xo-pagenav floatright"><{$pagenav}></div>
         <div class="clear spacer"></div>
     <{/if}>
 <{else}>  <!-- Display module images on edit page -->
     <!-- Display module form (add,edit) -->
-    <{if $form}>
+    <{if $form|default:''}>
         <div class="spacer"><{$form}></div>
     <{/if}>
 <{/if}>
-<{if $error}>
+<{if $error|default:''}>
     <div class="errorMsg">
         <strong><{$error}></strong>
     </div>
