@@ -11,6 +11,8 @@
  - fixed lang in blocks (heyula/goffy)
  - added link in blocks (heyula/goffy)
  - fixed problem in XoopsConfirm (goffy)
+ - fixed missing default values in smarty in modulebuilder itself (mamba/goffy)
+ - fixed missing default values in smarty in created modules (mamba/goffy)
 
 <h5>3.04 Final   [2020-11-11]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.5
 <hr>
